devops/k8s/base/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudsoc-frontend
  namespace: cloudsoc
  labels:
    app: cloudsoc-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudsoc-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: cloudsoc-frontend
    spec:
      containers:
        - name: frontend
          image: dianger16/frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5

          args: ["nginx", "-g", "daemon off;"]

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: cloudsoc
spec:
  selector:
    app: cloudsoc-frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
